--- a/global.css
+++ b/global.css
@@ -37,7 +37,6 @@ header {
   background-color: var(--Dark-purple);
   color: white;
   position: relative;
-  height: 481.71px;
   width: 100%;
 }
 
@@ -46,25 +45,19 @@ header {
 .nav-cta {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0rem 1rem;
   margin: auto;
-  padding-top: 2rem;
-  max-width: var(--container);
+  justify-content: space-between;
 }
 
 .logo {
-  width: 95.76px;
-  height: 24.61px;
+  justify-content: flex-start;
 }
 
 .apply {
+  justify-content: flex-end;
   font-family: var(--Manrope);
-  font-size: 1rem;
   font-weight: bold;
   text-decoration: underline var(--Eucaplyptus) 3px;
-  text-underline-offset: 5px;
 }
 
 header > h1,
@@ -74,15 +67,12 @@ header > h1,
 
 header > h1 {
   font-family: var(--Fraunces);
-  font-size: 3.125rem;
   max-width: var(--container);
-  padding-top: 4rem;
   text-align: center;
 }
 
 header > h1 > span {
   text-decoration: underline var(--Eucaplyptus) 4px;
-  text-underline-offset: 15px;
 }
 
 .learn-more {
@@ -92,22 +82,13 @@ header > h1 > span {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin-top: 2.5rem;
   color: var(--Dark-purple);
   background-color: var(--Eucaplyptus);
-  width: 133px;
-  height: 55px;
   font-weight: bold;
 }
 
 .mobile-hero {
-  left: 50%;
-  top: 50%;
-  margin-top: 145px;
-  margin-left: -150px;
   position: absolute;
-  width: 320px;
-  height: 184px;
   z-index: 1;
 }
 
@@ -115,7 +96,6 @@ ul {
   text-align: center;
   color: var(--Dark-purple);
   font-family: var(--Manrope);
-  max-width: 410px;
   margin: auto;
   list-style: none;
 }
@@ -126,22 +106,11 @@ ul {
   text-align: center;
   background-color: var(--Ghost-white);
   position: relative;
-  height: 1070px;
-}
-
-.list-groups {
-  padding: 2.5rem 0rem;
 }
 
 ul > h2 {
   font-family: var(--Fraunces);
   font-weight: bold;
-  font-size: 1.75rem;
-  padding: 1.5rem 0rem 1rem 0rem;
-}
-
-ul > p {
-  line-height: 28px;
 }
 
 .li-numbers {
@@ -152,14 +121,11 @@ ul > p {
   margin: auto;
   border-radius: 50%;
   border: 2px solid var(--Davys-grey);
-  width: 48px;
-  height: 46px;
 }
 
 /* Louis Graham section */
 
 .louis-graham {
-  margin: 6.25rem 0rem 4.625rem 0rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -167,39 +133,23 @@ ul > p {
   position: relative;
 }
 
-.louis-graham-img {
-  width: 281px;
-  height: 281px;
-}
-
 .blue-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 343px;
-  height: 375px;
   text-align: center;
   background-color: var(--Dark-purple);
   color: var(--White);
   position: absolute;
-  top: 230px;
-}
-
-.blue-box-content {
-  padding: 2rem 1.938rem;
 }
 
 .blue-box-content > h3 {
   font-family: var(--Fraunces);
-  font-weight: 600;
-  font-size: 2rem;
 }
 
 .blue-box-content > p {
   font-family: var(--Manrope);
-  font-size: 1rem;
-  padding: 1rem 0rem 1.5rem 0rem;
 }
 
 .apply-btn {
@@ -210,8 +160,6 @@ ul > p {
   background-color: var(--Eucaplyptus);
   font-family: var(--Manrope);
   color: var(--Dark-purple);
-  width: 172px;
-  height: 55px;
   margin: auto;
   cursor: pointer;
 }
@@ -220,8 +168,6 @@ ul > p {
 
 .logo-dark {
   cursor: pointer;
-  width: 95.76px;
-  height: 24.61px;
 }
 
 footer {
@@ -229,19 +175,13 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 20rem;
-  padding-bottom: 4rem;
-  gap: 3.563rem;
 }
 
 .social-icons {
   display: flex;
   flex-direction: row;
-  gap: 28px;
 }
 
 .socials {
   cursor: pointer;
-  width: 20px;
-  height: 20px;
 }
