--- a/tablet.css
+++ b/tablet.css
@@ -24,8 +24,9 @@
   }
 
   header > h1 {
-    font-size: 3.125rem;
+    font-size: 3.75rem;
     padding-top: 4rem;
+    max-width: 400px;
   }
 
   header > h1 > span {
@@ -38,5 +39,38 @@
     margin-top: 2.5rem;
     width: 133px;
     height: 55px;
+  }
+
+  .coil-one,
+  .coil-two {
+    position: absolute;
+  }
+
+  .coil-one {
+    width: 270.29px;
+    height: 215.1px;
+    top: 150px;
+    left: -175px;
+  }
+
+  .coil-two {
+    width: 141.7px;
+    height: 112.71px;
+    top: 290px;
+    right: -75px;
+  }
+
+  .mobile-hero {
+    left: 50%;
+    top: 50%;
+    margin-top: 145px;
+    margin-left: -257px;
+    width: 514px;
+    height: 296px;
+  }
+
+  .list-groups {
+    display: flex;
+    flex-direction: row;
   }
 }
